# Tensor-Max-Clique

./: LICENSE  README.md  max_clique.py  pyproject.toml  requirements.txt
example_run/: erdos_renyi_search.py
max_clique/: max_clique.py
max_clique/TN_libraries/: TNTools.py
tntools_max_clique/: __init__.py  tntools_max_clique.py
tntools_max_clique.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tntools_max_clique/example_run/: erdos_renyi_search.py
