[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tntools_max_clique"
version = "0.1.0"
description = "Graph Max Clique finder toy library. Proof of concept for the TNTools library."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "networkx>=2.5.0",
    "tntools>=0.0.0"
]